# showerpipe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg
.conda/: meta.yaml
.github/workflows/: publish-to-conda.yml  publish-to-pypi.yml  tests.yml
docs/: environment.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/usage/: installation.rst  quickstart.rst
showerpipe/: __init__.py  _base.py  _cli.py  _dataframe.py  _interface.py  base.py  generator.py  lhe.py  pythia.py
showerpipe/interfaces/: _base.py  cli.py  observer.py
showerpipe/pipeline/: __init__.py  _base.py  factory.py  filters.py  load.py  loader.py  sinks.py  sources.py
showerpipe/scripts/: core.py  main.py
tests/: test_generator.py
