[metadata]
name = showerpipe
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Data pipeline tools for particle shower and hadronisation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/showerpipe
project_urls = 
    Documentation = https://showerpipe.readthedocs.io
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
    showerpipe
install_requires =
    click
    lxml
    numpy
    pandas
    typicle

[options.entry_points]
console_scripts = 
    showergen = showerpipe._cli:showergen
